<resources>
    <string name="app_name">Agora</string>
    <string name="login">Agora</string>
    <string name="userOmail">Usuario o E-mail</string>
    <string name="password">Contraseña</string>
    <string name="personLog">Ingresar como persona</string>
    <string name="enterpriseLog">Ingresar como empresa</string>
    <string name="createUser">No tienes usuario, registrate!</string>
    <string name="noUser">Ingresar</string>
    <string name="title_activity_enterprise">EnterpriseActivity</string>
    <string name="Enterprise">Empresa</string>
    <string name="btnback">Volver</string>
    <string name="mensaje">Bienvenido: </string>
    <string name="title_activity_user_nav_draw">UserNavDrawActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Ayuda</string>

    <string name="navHeader_title">Menu</string>
    <string name="navHeader_subtitle">www.agora.com.ar</string>

    <string name="menu_home">Principal</string>
    <string name="menu_gallery">Perfil</string>
    <string name="menu_slideshow">otra cosa</string>
    <string name="mensajeuser">Bienvenido: </string>
    <string name="Btnsalir">Salir</string>

    <string name="home_second">Home Second</string>
    <string name="mensaje_reg">Registrate como usuario, es gratis!</string>

    <string name="register">Registrarse</string>
    <string name="register_name">Nombre</string>
    <string name="register_lastname">Apellido</string>
    <string name="register_email">E-Mail</string>
    <string name="register_password">Contraseña</string>
    <string name="register_password2">Confirmar Contraseña</string>
    <string name="register_btn_cancel">Cancelar</string>
    <string name="register_btn_accept">Aceptar</string>
    <string name="register_enterprise">Registrate como Empresa!!!</string>

</resources>
