<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/contraintRegister"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context=".RegisterActivity">

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/register"
        android:textColor="@color/primary_text"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.077" />

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="130dp"
        android:scrollbarStyle="insideInset"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.636">

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TableRow
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center">

                <EditText
                    android:id="@+id/edtNombre"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:ems="10"
                    android:hint="@string/register_name"
                    android:inputType="textPersonName"
                    android:textColor="@color/primary_text"
                    android:textColorHint="@color/secondary_text"
                    app:backgroundTint="@color/secondary_text"
                    android:importantForAutofill="no" />

            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <Space
                    android:layout_width="wrap_content"
                    android:layout_height="18sp" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center">

                <EditText
                    android:id="@+id/edtApellido"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:inputType="textPersonName"
                    android:hint="@string/register_lastname"
                    android:textColor="@color/primary_text"
                    android:textColorHint="@color/secondary_text"
                    app:backgroundTint="@color/secondary_text"
                    android:importantForAutofill="no"/>
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <Space
                    android:layout_width="wrap_content"
                    android:layout_height="18sp" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center">

                <EditText
                    android:id="@+id/edtEmail"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:inputType="textEmailAddress"
                    android:hint="@string/register_email"
                    android:textColor="@color/primary_text"
                    android:textColorHint="@color/secondary_text"
                    app:backgroundTint="@color/secondary_text"
                    android:importantForAutofill="no"/>
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <Space
                    android:layout_width="wrap_content"
                    android:layout_height="18sp" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center">

                <EditText
                    android:id="@+id/edtPass1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:inputType="textPassword"
                    android:hint="@string/register_password"
                    android:textColor="@color/primary_text"
                    android:textColorHint="@color/secondary_text"
                    app:backgroundTint="@color/secondary_text"
                    android:importantForAutofill="no"/>
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <Space
                    android:layout_width="wrap_content"
                    android:layout_height="18sp" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center">

                <EditText
                    android:id="@+id/edtPass2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:inputType="textPassword"
                    android:hint="@string/register_password2"
                    android:textColor="@color/primary_text"
                    android:textColorHint="@color/secondary_text"
                    app:backgroundTint="@color/secondary_text"
                    android:importantForAutofill="no"/>
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <Space
                    android:layout_width="wrap_content"
                    android:layout_height="48sp" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent" >

                <androidx.constraintlayout.widget.Guideline
                    android:id="@+id/guideline"
                    android:layout_width="80sp"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal" />

                <Space
                    android:layout_width="50sp"
                    android:layout_height="wrap_content" />

                <Button
                    android:id="@+id/btnAceptar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@color/lemon_background"
                    android:text="@string/register_btn_accept"
                    android:textColor="@color/colorPrimaryDark" />

                <Space
                    android:layout_width="120sp"
                    android:layout_height="wrap_content" />

                <Button
                    android:id="@+id/btnCancel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@color/lemon_background"
                    android:text="@string/register_btn_cancel"
                    android:textColor="@color/colorPrimaryDark" />

                <Space
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <androidx.constraintlayout.widget.Guideline
                    android:id="@+id/guideline3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal" />


            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent" >

                <Space
                    android:layout_width="wrap_content"
                    android:layout_height="42sp" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center">

                <TextView
                    android:id="@+id/textRegEnter"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/register_enterprise"
                    android:textColor="@color/primary_text"
                    android:textSize="18sp" />
            </TableRow>


        </TableLayout>
    </ScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>